owners list api new filters and count data